Previous commit did not fix problem on Safari browsers, so I removed the feature

--- a/Style/Main.css
+++ b/Style/Main.css
@@ -63,16 +63,15 @@ body {
 	background-color: #eee;
 	height: 100%;
 	width: 100%;
-	top: 600px;
 	position: absolute;
 	transition: 500ms;
-	opacity: 0.8;
-	display: none;
+	opacity: 0;
 }
 
 .project-col:hover > .project-overlay {
 		transition: 500ms;
 		top: 0px;
+		opacity: 0.8;
 }
 
 .project-title {
